@@ -1,3 +1,8 @@
+2010-01-26  Valentin Hilbig  <tino@firebird.03.softkill.net>
+
+	* socklinger.c (socklinger): max linger time implemented
+	(process_args): Option -w
+
 2010-01-25  Valentin Hilbig  <tino@firebird.03.softkill.net>
 
 	* socklinger.c (process_args): usage corrected
